--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.19.3",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
