--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@google/generative-ai": "^0.17.0",
     "antd": "^5.19.3",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
@@ -24,7 +25,9 @@
     "react-icons": "^5.2.1",
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.13.0",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "react-spring": "^9.7.4",
+    "styled-components": "^6.1.12"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
