--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,9 @@
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.25.1",
+    "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
