--- a/client/package.json
+++ b/client/package.json
@@ -26,12 +26,14 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.5.4",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.13.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
